# object-detection-inference

./: .gitignore  LICENSE  README.md
c++/: CMakeLists.txt  build.sh  install.sh  install_lccv.sh  install_ncnn.sh  install_onnx.sh
c++/src/: main.cpp  yolo.cpp  yolo.hpp
python/: install.sh  main.py
